FIX: Alignment Issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,7 +54,37 @@
   display: flex;
   justify-content: center;
   max-width: 100%;
-  overflow-y:scroll; 
+}
+
+
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.circle-link {
+  background-color: #859fa58e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 1s ease-out;
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+  border: 0px;
+  border-radius: 50px;
+  box-shadow: 0 3px 18px rgba(0, 0, 0, 0.507), 0 3px 5px rgba(0, 0, 0, 0.603);
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
 }
 
 @media screen and (min-width: 1000px)
@@ -86,6 +116,8 @@
   {
     width: 250px;
     aspect-ratio: 1/1;
+    position: relative;
+    z-index: 999;
   }
 
   .photo-div-decor
@@ -97,6 +129,7 @@
     border: 1px solid rgb(108, 34, 48);
     background: rgb(108, 34, 48);
     margin-top: 43px;
+    z-index: 999;
   }
 
   .about-div
@@ -124,24 +157,24 @@
 
   .h1-name
   {
-    font-size: 78px;
+    font-size: 60px;
   }
 
   .p-heading
   {
-    font-size: 20px;
+    font-size: 15px;
   }
   
   .a-heading-link
   {
-    font-size: 20px;
+    font-size: 15px;
   }
   
   .p-about-heading
   {
     margin-left: 30px;
     margin-right: 30px;
-    font-size: 54px;
+    font-size: 47px;
   }
   
   .p-about-content
@@ -149,20 +182,9 @@
     margin-top: 37px;
     margin-left: 30px;
     margin-right: 30px;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 40px;
   }
-
-
-
-
-
-
-
-
-
-
-
 
   .main-div
   {
@@ -171,21 +193,22 @@
 
   .name-div
   {
-    margin-top: 39px;
+    margin-top: 150px;
     text-align: center;
+    margin-bottom: 150px;
   }
 
   .photo-div
   {
     margin-top: 39px;
     width: 100%;
-    margin-bottom: 39px;
+    margin-bottom: 150px;
   }
 
   .mkv-pic
   {
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 10%;
+    width: 80%;
     aspect-ratio: 1/1;
   }
 
@@ -199,35 +222,19 @@
   .p-about-heading
   {
     text-align: center;
-    margin-top: 29px;
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
-}
 
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.circle-link {
-  background-color: #859fa58e;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: 1s ease-out;
-  height: 50px;
-  width: 50px;
-  margin: 10px;
-  border: 0px;
-  border-radius: 50px;
-  box-shadow: 0 3px 18px rgba(0, 0, 0, 0.507), 0 3px 5px rgba(0, 0, 0, 0.603);
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 35px;
-  width: 35px;
+  .circle-link {
+    height: 75px;
+    width: 75px;
+    margin: 15px;
+    border: 0px;
+  }
+  
+  .social-link {
+    height: 52px;
+    width: 52px;
+  }
 }
